--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,12 +3,12 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.3.1 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-
+  http: ^0.12.1
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
